[package]
name = "pn-sign"
description = "Utility for signing PubNub API requests"
version = "0.1.0"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.11"
bytes = "0.5"
chrono = "0.4"
headers = "0.3"
hmac = "0.7"
log = "0.4"
percent-encoding = "2.1"
pretty_env_logger = "0.4"
sha2 = "0.8"
structopt = "0.3"
thiserror = "1.0"
url = "2.1"

[build-dependencies]
built = { version = "0.4", features = ["chrono", "git2"] }

[features]
default = ["log-level-info"]

# Set only one of these
log-level-info = ["log/release_max_level_info"]
log-level-debug = ["log/release_max_level_debug"]
log-level-trace = ["log/release_max_level_trace"]

[profile.release]
lto = "fat"
codegen-units = 1
debug = true
opt-level = 1
