[package]
name = "pn-sign"
description = "Utility for signing PubNub API requests"
version = "0.2.0"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pnehrer/pn-sign"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
headers = "0.3"
hmac = "0.11"
log = "0.4"
percent-encoding = "2.1"
pretty_env_logger = "0.4"
sha2 = "0.9"
shell-escape = "0.1"
structopt = "0.3"
thiserror = "1.0"
url = "2.2"

[build-dependencies]
built = { version = "0.5", features = ["chrono", "git2"] }

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"

[features]
default = ["log-level-info"]

# Set only one of these
log-level-info = ["log/release_max_level_info"]
log-level-debug = ["log/release_max_level_debug"]
log-level-trace = ["log/release_max_level_trace"]

[profile.release]
lto = "fat"
codegen-units = 1
debug = true
opt-level = 1
